--- a/platformio.ini
+++ b/platformio.ini
@@ -2,3 +2,14 @@
 platform = windows_x86
 build_flags = -Isrc/windows -std=c++17 -lcomdlg32
 extra_scripts = pre:git-version.py
+
+[env:macos]
+platform = native
+extra_scripts = pre:git-version.py
+build_src_filter = +<*> -<main.cpp> -<windows/*> +<mac/main_mac.cpp>
+lib_ldf_mode = deep
+build_flags = 
+    -Isrc/mac 
+    -std=c++17
+    -Wl,-framework,CoreFoundation 
+    -Wl,-framework,IOKit
